Fix general warnings Skipped classes BlockStateNbtUtil, Macro, ItemUtils, probably a few more